--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 #header{
@@ -9,11 +9,11 @@
     margin-top: 25px;
     width: 1171px;
     height: 153px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     left: 374px;
 }
 
-.text{
+.header__text{
     text-decoration: none;
     color: #2F3035;
     font-weight: 700;
@@ -53,7 +53,7 @@
     left: 546px;
     width: 80px;
     height: 76px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .logo_vector{
@@ -101,7 +101,7 @@
     left: 724px;
     width: 30px;
     height: 30px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .location_vector{
@@ -143,7 +143,7 @@
     left: 1118px;
 }
 
-.ellipse{
+.menu__ellipse{
     position: absolute;
     top: 39px;
     left: 1142px;
@@ -151,7 +151,7 @@
     height: 20px;
 }
 
-.ellpse_text{
+.ellipse_text{
     position: absolute;
     top: 43px;
     left: 1149px;
@@ -164,4 +164,321 @@
     font-size: 10px;
     line-height: 12px;
     color: white;
+}
+
+.header_main{
+    position: absolute;
+    top: 97px;
+    width: 1171px;
+    height: 53px;
+    background-color: #F0F0F4;
+    /* border: 1px solid green; */
+}
+
+.menu__text{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color:#2F3035;
+    text-decoration: none;
+}
+.menu__atvs{
+    position: absolute;
+    width: 128px;
+    height: 25px;
+    top: 15px;   
+}
+
+.menu__motorboats{
+    position: absolute;
+    top: 18px;
+    left: 188px;
+    width: 64px;
+    height: 24px;
+}
+
+.menu__hydrocycle{
+    position: absolute;
+    top: 15px;
+    left: 312px;
+    width: 119px;
+    height: 24px;
+}
+
+.menu__boats{
+    position: absolute;
+    top: 15px;
+    left: 491px;
+    width: 58px;
+    height: 24px;
+}
+
+.menu__rover{
+    position: absolute;
+    top: 15px;
+    left: 609px;
+    width: 101px;
+    height: 24px;
+}
+
+.menu__snowmobiles{
+    position: absolute;
+    top: 15px;
+    left: 770px;
+    width: 100px;
+    height: 24px;
+}
+
+.menu__engines{
+    position: absolute;
+    top: 15px;
+    left: 930px;
+    width: 96px;
+    height: 24px;
+}
+
+.menu__spare{
+    position: absolute;
+    top: 15px;
+    left: 1086px;
+    width: 85px;
+    height: 24px;
+}
+
+.active__text{
+    font-weight: 600;
+}
+
+.active{
+    position: absolute;
+    top: 50px;
+    width: 116px;
+    height: 3px;
+    left: 312px;
+    background-color: #1c62cd;
+}
+
+.slider{
+    position: absolute;
+    top: 256px;
+    left: 374px;
+    width: 870px;
+    height: 400px;
+    /* border: 1px solid red; */
+}
+
+.slider__lefrarrow{
+    position: absolute;
+    top: 186px;
+    left: 23px;
+}
+
+.slider__rightarrow{
+    position: absolute;
+    top: 186px;
+    left: 831.82px;
+}
+
+.slider__groups_ellipse{
+    position: absolute;
+    top: 349px;
+    left: 380px;
+    width: 111px;
+    height: 11px;
+    /* border: 1px solid red; */
+}
+
+.ellipse1{
+    position: absolute;
+}
+
+.ellipse2{
+    position: absolute;
+    left: 20px;
+}
+
+.ellipse3{
+    position: absolute;
+    left: 40px;
+}
+.ellipse4{
+    position: absolute;
+    left: 60px;
+}
+.ellipse5{
+    position: absolute;
+    left: 80px;
+}
+.ellipse6{
+    position: absolute;
+    left: 100px;
+}
+
+.main__stocks{
+    position: absolute;
+    top: 257px;
+    left: 1280px;
+    height: 397px;
+    width: 265px;
+    /* border: 1px solid red; */
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+}
+
+.stocks__img{
+    position: absolute;
+    top: 67px;
+    left: 61px;
+}
+
+.stocks__tablet{
+    position: absolute;
+    width: 90px;
+    height: 30px;
+    background-color: #1C62CD;
+    
+}
+
+.stocks__text{
+    position: absolute;
+    top: 8px;
+    left: 20px;
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: white;
+    width: 50.69px;
+    height: 13.2px;
+}
+
+.stocks__price{
+    position: absolute;
+    top: 3px;
+    left: 145px;
+    width: 112.56px;
+    height: 33px;
+    /* border: 1px solid  red; */
+}
+
+.stocks__price__text{
+    position: absolute;
+    width: 93px;
+    height: 33px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 32px;
+    color: #1C62CD;
+}
+
+.stocks__price__icons__ruble{
+    position: absolute;
+    top: 9px;
+    left: 97.46px;
+    width: 15px;
+    height: 18px;
+}
+
+.old__price{
+    position: absolute;
+    top: 43px;
+    left: 192.67px;
+    width: 68.33px;
+    height: 17px;
+    /* border: 1px solid red; */
+}
+
+.old__price__text{
+    position: absolute;
+    width: 54px;
+    height: 17px;
+    left: 3.33px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #C4C4C4;
+}
+
+.old__price__icons__ruble{
+    position: absolute;
+    top: 4px;
+    left: 60.33px;
+}
+
+.stocks__product{
+    position: absolute;
+    left: 20px;
+    top: 248px;
+    width: 232.78px;
+    height: 43px;
+
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #2F3035;
+}
+
+.stocks__time__text{
+    position: absolute;
+    top: 324px;
+    left: 21px;
+    width: 231.77px;
+    height: 25px;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #2F3035;
+}
+
+.stocks__time__date{
+    position: absolute;
+    width: 231.77px;
+    height: 25px;
+    left: 21px;
+    top: 347px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #1C62CD;
+
+}
+
+.search{
+    position: absolute;
+    left: 375px;
+    top: 733px;
+    width: 1170px;
+    height: 122px;
+    border: 1px solid red;
+}
+
+.search__text{
+    position: absolute;
+    width: 156px;
+    height: 24px;
+    left: 20px;
+    top: 11px;
+
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #2F3035;
 }
