--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,7 +465,7 @@
     top: 733px;
     width: 1170px;
     height: 122px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .search__text{
@@ -475,10 +475,427 @@
     left: 20px;
     top: 11px;
 
+    font-weight: 400;
+}
+
+.search__text2{
+    position: absolute;
+    width: 152px;
+    height: 24px;
+    left: 230px;
+    top: 11px;
+    
+    font-weight: 700;
+    
+}
+.search__text3{
+    position: absolute;
+    width: 238px;
+    height: 24px;
+    left: 442px;
+    top: 11px;
+    
+    font-weight: 400;
+}
+
+.search__text_style{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #2F3035;
+    
+}
+
+.search_input{
+    position: absolute;
+    width: 1170px;
+    height: 50px;
+    top: 72px;
+    /* border: 1px solid blue; */
+    background-color: #F0F0F4;
+    border-radius: 3px;
+}
+
+.search_input__hint{
+    position: absolute;
+    width: 107px;
+    height: 20px;
+    left: 20px;
+    top: 15px;
+
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #656464;
+}
+
+.search_button{
+    position: absolute;
+    width: 145px;
+    height: 50px;
+    left: 1025px;
+    background: #1C62CD;
+    border-radius: 3px;
+}
+
+.search_button__text{
+    position: absolute;
+    width: 67px;
+    height: 17px;
+    left: 40px;
+    top: 17px;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.categories{
+    position: absolute;
+    left: 375px;
+    top: 935px;
+    width: 1170px;
+    height: 288px;
+    /* border: 1px solid red; */
+}
+.categories__text__style{
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 23px;
+    line-height: 28px;
+    color: #2F3035;
+}
+.categories__detail__text__style{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #C4C4C4;
+    
+}
+
+.categories__atvs{
+    position: absolute;
+    width: 370px;
+    height: 129px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid blue; */
+}
+
+.categories__atvs__text{
+    position: absolute;
+    width: 169px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+}
+
+.categories__atvs__img{
+    position: absolute;
+    width: 130.21px;
+    height: 100px;
+    left: 202px;
+    top: 22px;
+}
+
+.categories__atvs__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+
+.categories__atvs__detail__text{
+    position: absolute;
+    width: 63px;
+    height: 15px;
+}
+
+.categories__atvs__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+.categories__hydrocycle{
+    position: absolute;
+    width: 370px;
+    height: 129px;
+    left: 400px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid orangered; */
+}
+
+.categories__hydrocycle__text{
+    position: absolute;
+    width: 154px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+}
+
+.categories__hydrocycle__img{
+    position: absolute;
+    width: 152px;
+    height: 81px;
+    left: 193px;
+    top: 25px;
+}
+
+.categories__hydrocycle__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+
+.categories__hydrocycle__detail__text{
+    position: absolute;
+    width: 63px;
+    height: 15px;
+}
+
+.categories__hydrocycle__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+.categories__motorboats{
+    position: absolute;
+    width: 370px;
+    height: 129px;
+    left: 800px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid orangered; */
+}
+
+.categories__motorboats__text{
+    position: absolute;
+    width: 169px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+}
+
+.categories__motorboats__img{
+    position: absolute;
+    width: 207px;
+    height: 101px;
+    left: 157px;
+    top: 13px;
+}
+
+.categories__motorboats__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+
+.categories__motorboats__detail__text{
+    position: absolute;
+    width: 84px;
+    height: 28px;
+}
+
+.categories__motorboats__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+
+/* //wefwefwefwefwefwefwef */
+.categories__snowmobiles{
+    position: absolute;
+    top: 159px;
+    width: 370px;
+    height: 129px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid blue; */
+}
+
+.categories__snowmobiles__text{
+    position: absolute;
+    width: 130px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+
+}
+
+.categories__snowmobiles__img{
+    position: absolute;
+    width: 165px;
+    height: 105px;
+    left: 185px;
+    top: 11px;
+}
+
+.categories__snowmobiles__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+.categories__snowmobiles__detail__text{
+    position: absolute;
+    width: 63px;
+    height: 15px; 
+}
+
+.categories__snowmobiles__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+.categories__rover{
+    position: absolute;
+    top: 159px;
+    width: 370px;
+    height: 129px;
+    left: 400px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid orangered; */
+}
+
+.categories__rover__text{
+    position: absolute;
+    width: 169px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+}
+
+.categories__rover__img{
+    position: absolute;
+    width: 157px;
+    height: 101px;
+    left: 190px;
+    top: 15px;
+}
+
+.categories__rover__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+
+.categories__rover__detail__text{
+    position: absolute;
+    width: 63px;
+    height: 15px;
+}
+
+.categories__rover__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+.categories__engines{
+    position: absolute;
+    top: 159px;
+    width: 370px;
+    height: 129px;
+    left: 800px;
+    background: #FFFFFF;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    /* border: 1px solid orangered; */
+}
+
+.categories__engines__text{
+    position: absolute;
+    width: 131px;
+    height: 28px;
+    left: 20px;
+    top: 20px;
+
+}
+
+.categories__engines__img{
+    position: absolute;
+    width: 66px;
+    height: 113px;
+    left: 227px;
+    top: 7px;
+}
+
+.categories__engines__detail{
+    position: absolute;
+    width: 72px;
+    height: 15px;
+    left: 20px;
+    top: 100px;
+}
+
+.categories__engines__detail__text{
+    position: absolute;
+    width: 63px;
+    height: 15px;
+}
+
+.categories__engines__detail__vector{
+    position: absolute;
+    left: 66px;
+    top: 4px;
+}
+
+.popular_product{
+    position: absolute;
+    width: 1241.18px;
+    height: 597px;
+    left: 339px;
+    top: 1303px;
+    border: 1px solid red;
+}
+
+.popular_product__header{
+    position: absolute;
+    width: 1170px;
+    height: 84px;
+    left: 36px;
+    border: 1px solid black;
+}
+
+.popular_product__header__text{
+    position: absolute;
+    height: 30px;
+
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
     color: #2F3035;
 }
